--- a/src/app/drivers/messages/messages.css
+++ b/src/app/drivers/messages/messages.css
@@ -1,13 +1,130 @@
-.btn-chat {
-  background-color: greenyellow;
+::-webkit-input-placeholder {
+  color: #666;
+  opacity: 1
 }
 
-input[type=text] {
-  width: 30%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: 3px solid darkgray;
-  background-color: white;
-  color: black;
+:-moz-placeholder {
+  color: #666;
+  opacity: 1
+}
+
+::-moz-placeholder {
+  color: #666;
+  opacity: 1
+}
+
+:-ms-input-placeholder {
+  color: #666;
+  opacity: 1
+}
+
+body input:focus:required:invalid,
+body input:required:valid,
+body textarea:focus:required:invalid,
+body textarea:required:valid {
+  color: #666
+}
+
+body {
+  background: #F7F7F7;
+  padding: 10px
+}
+
+.driver-name {
+  margin: 10px 0;
+  text-align: right
+}
+
+.chat {
+  width: 100%;
+  height: -webkit-calc(100vh - 230px);
+  height: calc(100vh - 230px);
+  border: 1px solid gold
+}
+
+.message-form {
+  float: right;
+  width: 460px;
+  height: 120px;
+  min-width: 100px;
+  margin: 20px 0
+}
+
+.message-form textarea {
+  float: left;
+  display: block;
+  width: -webkit-calc(100% - 100px);
+  width: calc(100% - 100px);
+  max-width: -webkit-calc(100% - 70px);
+  max-width: calc(100% - 70px);
+  min-width: -webkit-calc(100% - 70px);
+  min-width: calc(100% - 70px);
+  height: 120px;
+  margin: 10px 0 0;
+  outline: 0;
+  border: 1px solid #DCDCDC;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  padding: 8px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box
+}
+
+.message-form .send-block {
+  position: relative;
+  float: left;
+  display: block;
+  width: 60px;
+  margin: 10px 0 0 10px
+}
+
+.message-form .send-block .status {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background: #04D239
+}
+
+.message-form .send-block p {
+  margin: 0;
+  text-align: center;
+  color: #868686;
+  line-height: 18px
+}
+
+.message-form .send-block p:first-child {
+  color: #000
+}
+
+.message-form .send-block button {
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  outline: 0;
+  border: none;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  color: #FFF;
+  font-size: 14px;
+  background: #04D239;
+  -webkit-transition: all .2s;
+  transition: all .2s
+}
+
+.message-form .send-block button:hover {
+  background: #04c335
+}
+
+.animated {
+  -webkit-transition-property: none!important;
+  transition-property: none!important;
+  -ms-transform: none!important;
+  -webkit-transform: none!important;
+  transform: none!important;
+  -webkit-animation: none!important;
+  animation: none!important
 }
