--- a/layout/index.html
+++ b/layout/index.html
@@ -3,16 +3,69 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FSPA</title>
+
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Orbitron" />
+	<link rel="stylesheet" href="assets/css/style.css">
+
+
 </head>
 <body>
-		<div class="page-container">
+	<div class="page-container">
 		<div class="sidebar-menu">
+			<!--  container for logo -->
 			<div class="logo-container">
 				<span class="logo-letter">b</span>
 				<span class="logo-number">18</span>
 			</div>
+			<!-- end of container for logo -->
+
+			<!--  container for Menu items -->
+			<div class="menu-container">
+				<ul>
+					<li class="active">
+						<a href="#">Menu item</a>
+					</li>
+					<li class="">
+						<a href="#">Menu item</a>
+					</li>
+					<li class="">
+						<a href="#">Menu item</a>
+					</li>
+					<li class="">
+						<a href="#">Menu item</a>
+					</li>
+					<li class="">
+						<a href="#">Menu item</a>
+					</li>
+				</ul>
+			</div>
+			<!--  end of container for Menu items -->
+
+			<!--  container for Menu Master Button -->
+			<div class="menu-master-container">
+				<button>
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+			</div>
+			<!-- end container for Menu Master Button -->
+
+			<!-- end container for Pane View Switch  -->
+			<div class="pane-switch-container">
+				<div class="pane-switch-group">
+  					<button></button>
+  					<button></button>
+  					<button></button>
+  					<button></button>
+				</div>
+			</div>
+			<!-- end container for Pane View Switch -->
 		</div>
+
 	</div>
+	
 	
 	
 </body>
