add header to page

--- a/layout/index.html
+++ b/layout/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<div class="page-container">
+		<!-- left sidebar  -->
 		<div class="sidebar-menu">
 			<!--  container for logo -->
 			<div class="logo-container">
@@ -63,6 +64,38 @@
 			</div>
 			<!-- end container for Pane View Switch -->
 		</div>
+		<!-- END OF left sidebar  -->
+
+		<!--  main content  -->
+		<div class="main-content">
+			<div class="main-header">
+
+				<!--  search container  -->
+				<div class="search-container">
+					<div class="search-form">
+					    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					    <input type="text" placeholder="Search for anything by number, name, date or amount">
+					</div>
+				</div>
+				<!-- end of search container  -->
+
+				<!--  header buttons container  -->
+				<div class="buttons-container">
+
+					<a href="" class="header-btn notifications">
+						 <span class="glyphicon glyphicon-bell" aria-hidden="true"></span>
+					</a>
+
+					<a href="" class="header-btn user">
+						 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+					</a>
+
+				</div>
+				<!-- end of  header buttons container  -->
+			</div>
+		</div>
+		<!--  end of main content  -->
+
 
 	</div>
 	
