--- a/layout/assets/css/style.css
+++ b/layout/assets/css/style.css
@@ -2,6 +2,7 @@ body{
 	height:100%;
 	font-size:14px;
 	font-family: "Times New Roman", Georgia, sans-erif;
+	background:#eee;
 }
 
 /* sidebar menu */
@@ -129,4 +130,59 @@ body{
 .pane-switch-container button{
 	background:none;
 	border-color:#fff;
+}
+
+
+/* main content */
+.main-content{
+	margin-left:120px;
+}
+
+
+/* main header */
+
+.main-header{
+	display: flex;
+	flex-wrap:wrap;
+	border-bottom:2px solid #6c6c6c;
+}
+
+.search-container{
+	width:80%;
+}
+
+
+.search-form{
+	border:0;
+	height:45px;
+	line-height: 45px;
+	display:flex;
+	align-items:center;
+	flex-wrap:wrap;
+}
+
+.search-form span{
+	color:#6c6c6c;
+	padding:0 15px;
+}
+
+.search-form input {
+	border: none;
+	background: none;
+	color:#000;
+	width:80%;
+}
+
+/*  header buttons container  */
+.buttons-container{
+	width:20%;
+	display:flex;
+	flex-wrap:wrap;
+	align-items:center;
+	justify-content:flex-end;
+}
+.buttons-container a{
+	color:#6c6c6c;
+	font-size:1.5em;
+	margin:0 10px;
 }
