--- a/layout/index.html
+++ b/layout/index.html
@@ -82,13 +82,53 @@
 				<!--  header buttons container  -->
 				<div class="buttons-container">
 
-					<a href="" class="header-btn notifications">
-						 <span class="glyphicon glyphicon-bell" aria-hidden="true"></span>
-					</a>
+					<button class="header-btn notifications" id="main-notify">
+						 <i class="glyphicon glyphicon-bell"></i>
 
-					<a href="" class="header-btn user">
-						 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-					</a>
+						 <div class="notif-tooltip">
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+						</div>
+
+
+					</button>
+
+					
+
+					<button href="" class="header-btn user" id="main-user">
+						 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+						 
+						 <div class="notif-tooltip">
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+							<div class="notif-item">
+								<h4>Notification title</h4>
+								<p>Text of notification goes here explaining more.</p>
+								<a href="#">Action link</a>
+							</div>
+						</div>
+					</button>
 
 				</div>
 				<!-- end of  header buttons container  -->
