--- a/layout/index.html
+++ b/layout/index.html
@@ -82,53 +82,52 @@
 				<!--  header buttons container  -->
 				<div class="buttons-container">
 
-					<button class="header-btn notifications" id="main-notify">
+					<a href="#" class="header-btn notifications" type="button" id="main-notify">
 						 <i class="glyphicon glyphicon-bell"></i>
 
 						 <div class="notif-tooltip">
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 						</div>
 
-
-					</button>
+					</a>
 
 					
 
-					<button href="" class="header-btn user" id="main-user">
+					<a href="#" class="header-btn user" id="main-user">
 						 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-						 
+
 						 <div class="notif-tooltip">
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 							<div class="notif-item">
 								<h4>Notification title</h4>
 								<p>Text of notification goes here explaining more.</p>
-								<a href="#">Action link</a>
+								<button>Action link</button>
 							</div>
 						</div>
-					</button>
+					</a>
 
 				</div>
 				<!-- end of  header buttons container  -->
@@ -139,7 +138,7 @@
 
 	</div>
 	
-	
+	<script src="assets/scripts/ui.js"></script>
 	
 </body>
 </html>
