--- a/layout/index.html
+++ b/layout/index.html
@@ -55,14 +55,14 @@
 
 			<!-- end container for Pane View Switch  -->
 			<div class="pane-switch-container">
-				<div class="pane-switch-group">
-  					<button></button>
-  					<button></button>
-  					<button></button>
-  					<button></button>
-				</div>
+				<ul id="pane-switch-group">
+  					<li class=""></li>
+  					<li class=""></li>
+  					<li class="active"></li>
+  					<li class=""></li>
+				</ul>
 			</div>
-			<!-- end container for Pane View Switch -->
+			<!-- end container for P						ane View Switch -->
 		</div>
 		<!-- END OF left sidebar  -->
 
@@ -105,8 +105,6 @@
 
 					</a>
 
-					
-
 					<a href="#" class="header-btn user" id="main-user">
 						 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
 
@@ -128,10 +126,26 @@
 							</div>
 						</div>
 					</a>
-
 				</div>
 				<!-- end of  header buttons container  -->
 			</div>
+			<!-- end of main header -->
+
+
+			<!-- work area -->
+			<div class="main-area row">
+				<div class="col-lg-3 col-md-3 col-sm-3 pane pane-1">
+					<div class="content">Pane 1 - ususally List View</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 pane pane-2">
+					<div class="content">Pane 2 - depends on the context</div>
+				</div>
+				<div class="col-lg-5 col-md-5 col-sm-5 pane pane-3">
+					<div class="content">Pane 3 - ususally Details View</div>
+				</div>
+			</div>
+			<!-- end of work area-->
+
 		</div>
 		<!--  end of main content  -->
 
