change markup to sass version

--- a/layout/index.html
+++ b/layout/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Orbitron" />
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/dist/build.css">
 
 
 </head>
@@ -62,7 +62,7 @@
   					<li class=""></li>
 				</ul>
 			</div>
-			<!-- end container for P						ane View Switch -->
+			<!-- end container for Pane View Switch -->
 		</div>
 		<!-- END OF left sidebar  -->
 
