--- a/layout/index.html
+++ b/layout/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>FSPA</title>
 
-	<link rel="stylesheet" href="assets/css/libs/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Orbitron" />
 	<link rel="stylesheet" href="assets/css/dist/build.css">
 
