--- a/layout/index.html
+++ b/layout/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+
 	<div class="page-container">
 		<!-- left sidebar  -->
 		<div class="sidebar-menu time-animation" id="sidebar-menu">
@@ -19,26 +20,25 @@
 				<span class="logo-number">18</span>
 			</div>
 			<!-- end of container for logo -->
-
 			<!--  container for Menu items -->
 			<div class="menu-container">
-				<ul>
-					<li class="active">
+
+					<div class="active">
 						<a href="#">Menu item</a>
-					</li>
-					<li class="">
+					</div>
+					<div class="">
 						<a href="#">Menu item</a>
-					</li>
-					<li class="">
+					</div>
+					<div class="">
 						<a href="#">Menu item</a>
-					</li>
-					<li class="">
+					</div>
+					<div class="">
 						<a href="#">Menu item</a>
-					</li>
-					<li class="">
+					</div>
+					<div class="">
 						<a href="#">Menu item</a>
-					</li>
-				</ul>
+					</div>
+
 			</div>
 			<!--  end of container for Menu items -->
 
@@ -67,6 +67,21 @@
 
 		<!--  main content  -->
 		<div class="main-content time-animation" id="main-content">
+
+			<!-- mobile menu button -->
+			<div class="mobile-menu-container">
+				<button class="mobile-menu" id="mobile-menu-btn">
+					<span class="glyphicon glyphicon-align-justify"></span>
+				</button>
+				<!-- mobile state string -->
+					<div class="mobile-state-string">
+						<span>Active menu item</span>
+						<button class="mobile-switch" id="mobile-switch"></button>
+					</div>
+				<!-- end of mobile state string -->
+			</div>
+			<!-- end of mobile menu button -->
+
 			<div class="main-header">
 
 				<!--  search container  -->
@@ -80,7 +95,6 @@
 
 				<!--  header buttons container  -->
 				<div class="buttons-container">
-
 					<a href="#" class="header-btn notifications" type="button" id="main-notify">
 						 <i class="glyphicon glyphicon-bell"></i>
 
@@ -101,7 +115,6 @@
 								<button>Action link</button>
 							</div>
 						</div>
-
 					</a>
 
 					<a href="#" class="header-btn user" id="main-user">
@@ -131,21 +144,7 @@
 			<!-- end of main header -->
 
 
-			<!-- work area 
-
-			<div class="main-area row">
-				<div class="col-lg-3 col-md-3 col-sm-3 pane pane-1">
-					<div class="content">Pane 1 - ususally List View</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 pane pane-2">
-					<div class="content">Pane 2 - depends on the context</div>
-				</div>
-				<div class="col-lg-5 col-md-5 col-sm-5 pane pane-3">
-					<div class="content">Pane 3 - ususally Details View</div>
-				</div>
-			</div>   
-		-->
-
+			<!-- work area -->
 			<div class="main-area" style="display:flex;">
 				<div class="pane pane-1" style="width:30%;" id="pane-1">
 					<div class="content">Pane 1 - ususally List View</div>
@@ -161,7 +160,6 @@
 
 		</div>
 		<!--  end of main content  -->
-
 
 	</div>
 	
