build prorotype deom via webpack

--- a/layout/index.html
+++ b/layout/index.html
@@ -6,8 +6,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Orbitron" />
-	<link rel="stylesheet" href="assets/css/dist/build.css">
-
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -162,8 +161,8 @@
 		<!--  end of main content  -->
 
 	</div>
-	
+
 	<script src="assets/scripts/ui.js"></script>
-	
+
 </body>
 </html>
